jstv/renderers/textstream.textstream.css
.textstream .type-sprite,.textstream .type-text,.textstream .type-image {
	display: none;
	position: absolute;

	-webkit-transition: all 0.5s;
	-moz-transition: all 0.5s;
	-o-transition: all 0.5s;
	-ms-transition: all 0.5s;
	transition: all 0.5s;
	overflow: hidden;
	font-size: 50px;
	font-family: sans-serif;

	-webkit-background-size: contain;
	-moz-background-size: contain;
	background-size: contain;
	background-repeat: no-repeat;
	background-position: center;
}

.textstream .backgroundimage {
	-webkit-background-size: cover;
	-moz-background-size: cover;
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center;
}

.textstream .backgroundimage,.textstream .background {
	width: 100%;
	height: 100%;
	position: absolute;
	left: 0;
	right: 0;
}

.textstream A {
	color: #d00;
}


/* Default z-index */

.textstream .backgroundimage { z-index: 1; }
.textstream .background {z-index: 2; }

.textstream .sprite-0 { z-index: 101; }
.textstream .sprite-1 { z-index: 102; }
.textstream .sprite-2 { z-index: 103; }
.textstream .sprite-3 { z-index: 104; }
.textstream .sprite-4 { z-index: 105; }
.textstream .sprite-5 { z-index: 106; }
.textstream .sprite-6 { z-index: 107; }
.textstream .sprite-7 { z-index: 108; }
.textstream .sprite-8 { z-index: 109; }
.textstream .sprite-9 { z-index: 110; }

.textstream .type-text { z-index: 200; }
.textstream .text-0 { z-index: 201; }
.textstream .text-1 { z-index: 202; }
.textstream .text-2 { z-index: 203; }
.textstream .text-3 { z-index: 204; }
.textstream .text-4 { z-index: 205; }
.textstream .text-5 { z-index: 206; }
.textstream .text-6 { z-index: 207; }
.textstream .text-7 { z-index: 208; }
.textstream .text-8 { z-index: 209; }
.textstream .text-9 { z-index: 210; }

.textstream .type-image { z-index: 300; }
.textstream .logo { z-index:301; }
.textstream .title { z-index: 302; }
.textstream .program { z-index: 303; }
.textstream .text { z-index: 304; }
.textstream .author { z-index: 305; }
.textstream .source { z-index: 306; }
.textstream .date { z-index: 307; }

/*
 * GLOBAL TEXTSTREAM
 */
.textstream .main.logo {
	display: block;
	left: 10px;
	bottom: 5px;
	width: 30px;
	height: 30px;
}

.textstream .main.sprite-0 {
	display: block;
	bottom: 0px;
	left: 0px;
	right: 0px;
	top: 0px;
	background-color: #222;
}

.textstream .main.sprite-1 {
	display: block;
	bottom: 0px;
	left: 0px;
	right: 0px;
	background-color: #cecece;
	height: 40px;
}

.textstream .main.program {
	display: block;
	left: 50px;
	bottom: 0px;
	font-size: 25px;
	line-height: 40px;
	height: 40px;
	right: 60px;
	color:#000;
}

.textstream .streamitem {
	position: absolute;
	left: 0px;
	right: 0px;
	width: 640px;
	height: 350px;
	overflow: hidden;
}

/*
 * RSS FEED
 */
/* DEFAULT */
.textstream.rssfeed .hidden {
	display: none;
}

.textstream.rssfeed .streamitem .item.source {
	-webkit-transition: all 1s ease 0s;
	-moz-transition: all 1s ease 0s;
	-o-transition: all 1s ease 0s;
	-ms-transition: all 1s ease 0s;
	transition: all 1s ease 0s;
	display: block;
	left: 0px;
	width: 620px;
	top: 10px;
	font-size: 15px;
	line-height: 20px;
	height: 20px;
	padding: 0 10px;
	background-color: #fff;
	color: #999;
}

.textstream.rssfeed .streamitem .item.title {
	-webkit-transition: all 1s ease 0.1s;
	-moz-transition: all 1s ease 0.1s;
	-o-transition: all 1s ease 0.1s;
	-ms-transition: all 1s ease 0.1s;
	transition: all 1s ease 0.1s;
	font-weight: bold;
	display: block;
	left: 0px;
	width: 620px;
	padding: 5px 10px;
	top: 30px;
	font-size: 22px;
	line-height: 27px;
	height: 50px;
	color: #fff;
}

.textstream.rssfeed .streamitem .item.text {
	-webkit-transition: all 1s ease 0s;
	-moz-transition: all 1s ease 0s;
	-o-transition: all 1s ease 0s;
	-ms-transition: all 1s ease 0s;
	transition: all 1s ease 0s;
	display: block;
	top: 100px;
	height: 210px;
	width: 340px;
	left: 260px;
	font-size: 18px;
	line-height: 30px;
	border: 15px solid #fff;
	background-color: #fff;
	color: #000;
	border-radius: 10px;
}

.textstream.rssfeed .streamitem .item.image {
	-webkit-transition: all 1s ease 0s;
	-moz-transition: all 1s ease 0s;
	-o-transition: all 1s ease 0s;
	-ms-transition: all 1s ease 0s;
	transition: all 1s ease 0s;
	display: block;
	left: 10px;
	top: 100px;
	height: 240px;
	width: 240px;
}

.textstream.rssfeed .streamitem .item.date {
	-webkit-transition: all 1s ease 0s;
	-moz-transition: all 1s ease 0s;
	-o-transition: all 1s ease 0s;
	-ms-transition: all 1s ease 0s;
	transition: all 1s ease 0s;

	-webkit-transform: scale(1,1);
	-moz-transform: scale(1,1);
	-o-transform: scale(1,1);
	-ms-transform: scale(1,1);
	transform: scale(1,1);

	-webkit-box-shadow: 0 -1px 5px #000;
	box-shadow: 0 -1px 5px #000;
	font-weight: bold;
	color: #fff;
	display: block;
	bottom: 20px;
	right: 0px;
	font-size: 12px;
	line-height: 12px;
	padding: 5px;
	background-color: #d00;
}

.textstream.rssfeed .streamitem.old .item.text {
	background-color: #eee;
	border: 15px solid #eee;
}

.textstream.rssfeed .streamitem.old .item.date {
	color: #eee;
	background-color: #daa;
}

/* NEXT */
.textstream.rssfeed .streamitem.next .item.source {
	left: 640px;
}

.textstream.rssfeed .streamitem.next .item.title {
	left: 640px;
}

.textstream.rssfeed .streamitem.next .item.text {
	left: 640px;
}

.textstream.rssfeed .streamitem.next .item.image {
	left: -240px;
}

.textstream.rssfeed .streamitem.next .item.date {
	-webkit-transform: scale(1,0);
	-moz-transform: scale(1,0);
	-o-transform: scale(1,0);
	-ms-transform: scale(1,0);
	transform: scale(1,0);
}

/* PREVIOUS */
.textstream.rssfeed .streamitem.previous .item.source {
	left: -640px;
}

.textstream.rssfeed .streamitem.previous .item.title {
	left: -640px;
}

.textstream.rssfeed .streamitem.previous .item.text {
	top: 350px;
}

.textstream.rssfeed .streamitem.previous .item.image {
	top: 350px;
}
/* ... */

